--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap");
 
 * {
   box-sizing: border-box;
@@ -13,7 +13,7 @@
 body {
   background: #333;
   color: #fff;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h2 {
@@ -47,6 +47,7 @@ p {
   align-items: center;
   justify-content: center;
   text-align: center;
+  text-shadow: rgba(51, 51, 51, 0.425);
 
   transition: all 0.5s ease-in;
 }
